[gd_scene load_steps=5 format=3 uid="uid://dw3wxnk0s0qom"]

[ext_resource type="Script" uid="uid://bpvyonlebbht7" path="res://ui/game/hud/windows/character/spells/loadout_pad.gd" id="1_1u5if"]
[ext_resource type="Texture2D" uid="uid://b7rkqmicjjs08" path="res://ui/game/hud/systems/mobile/textures/Joystick.png" id="2_58wyw"]


[sub_resource type="Shader" id="Shader_circle_icon"]
code = "shader_type canvas_item;

void fragment() {
	vec2 d = UV - vec2(0.5);
	if (length(d) > 0.5) {
		discard;
	}
	COLOR = texture(TEXTURE, UV);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_circle_icon"]
shader = SubResource("Shader_circle_icon")

[node name="LoadoutPadRoot" type="Control"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_1u5if")

[node name="LoadoutPad" type="Control" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slot0Btn" type="TextureButton" parent="LoadoutPad"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("2_58wyw")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="LoadoutPad/Slot0Btn"]
material = SubResource("ShaderMaterial_circle_icon")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Slot1Btn" type="TextureButton" parent="LoadoutPad"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = 60.0
grow_vertical = 0
texture_normal = ExtResource("2_58wyw")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="LoadoutPad/Slot1Btn"]
material = SubResource("ShaderMaterial_circle_icon")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Slot2Btn" type="TextureButton" parent="LoadoutPad"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -35.0
offset_right = 70.0
offset_bottom = 25.0
grow_vertical = 2
texture_normal = ExtResource("2_58wyw")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="LoadoutPad/Slot2Btn"]
material = SubResource("ShaderMaterial_circle_icon")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Slot3Btn" type="TextureButton" parent="LoadoutPad"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = 10.0
offset_right = 25.0
offset_bottom = 70.0
grow_horizontal = 2
texture_normal = ExtResource("2_58wyw")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="LoadoutPad/Slot3Btn"]
material = SubResource("ShaderMaterial_circle_icon")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Slot4Btn" type="TextureButton" parent="LoadoutPad"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_bottom = 60.0
grow_horizontal = 0
texture_normal = ExtResource("2_58wyw")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="LoadoutPad/Slot4Btn"]
material = SubResource("ShaderMaterial_circle_icon")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
